--- a/src/components/AreaGallery/index.scss
+++ b/src/components/AreaGallery/index.scss
@@ -3,23 +3,14 @@
 @use "../../styles/mixins";
 @use "../../styles/global";
 
-.comments {
+.gallery {
   margin-top: 4rem;
-  margin-bottom: 4rem;
 
   @media screen and (min-width: variables.$breakpoint-xl) {
     display: flex;
     justify-content: center;
     flex-direction: column;
   }
-
-  .container-card {
-    @media screen and (min-width: variables.$breakpoint-xl) {
-      display: flex;
-      justify-content: center;
-    }
-  }
-
   .title-container {
     width: 90%;
     margin: auto;
@@ -45,35 +36,39 @@
       }
     }
   }
-  .index-subtitle-article {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    color: #c19d53;
-    font-style: italic;
-    margin-bottom: 0.3rem;
-    text-align: center;
-  }
+}
+.index-subtitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  color: #c19d53;
+  font-style: italic;
+  margin-bottom: 0.3rem;
+  text-align: center;
+}
 
-  .index-title-article {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Playfair Display", serif;
-    font-size: 2.2rem;
-    margin: 0;
-    color: #0f172a;
-    text-align: center;
+.index-title-about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Playfair Display", serif;
+  font-size: 2.2rem;
+  margin: 0;
+  color: #0f172a;
+  text-align: center;
+  margin-top: 0rem;
+
+  @media screen and (max-width: 760px) {
     margin-top: 4rem;
   }
+}
 
-  .border-title-about {
-    width: 50px;
-    height: 4px;
-    background-color: #c19d53;
-    margin: 0.5rem 0 1.5rem 0;
-    border-radius: 2px;
-    margin: 1rem auto 1rem auto;
-  }
+.border-title-about {
+  width: 50px;
+  height: 4px;
+  background-color: #c19d53;
+  margin: 0.5rem 0 1.5rem 0;
+  border-radius: 2px;
+  margin: 1rem auto 1rem auto;
 }
