--- a/src/components/ButtonWpp/index.scss
+++ b/src/components/ButtonWpp/index.scss
@@ -1,46 +1,45 @@
-@use '../../styles/variables';
+@use "../../styles/variables";
 
+.wpp-floating {
+  position: fixed;
+  display: flex;
+  bottom: 16%;
+  left: 40%;
+  z-index: 999;
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  align-items: center;
 
-.wpp-floating{
-    position: fixed;
+  //media
+  @media screen and (min-width: variables.$breakpoint-xl) {
+    left: 82%;
+  }
+
+  h5 {
+    color: #444444;
+    background-color: #eee;
+    padding: 0 1rem;
+    height: 40px;
+    font-size: 0.9rem;
+    border-radius: 5px;
     display: flex;
-    bottom: 5%;
-    left: 40%;
-    z-index: 999;
+    align-items: center;
     margin: 0;
-    padding: 0;
-    width: 300px;
-    align-items: center; 
+    font-family: sans-serif;
+  }
+  a {
+    background-color: rgb(26, 192, 26);
+    margin-left: 0.5rem;
+    border: none;
+    border-radius: 50%;
+    padding: 0.8rem;
+    cursor: pointer;
 
-    //media
-    @media screen and (min-width: variables.$breakpoint-xl){
-        left: 82%;
+    img {
+      width: 35px;
+      display: block;
+      margin: auto;
     }
-
-    h5{
-        color: #444444;
-        background-color: #eee;
-        padding: 0 1rem;
-        height: 40px;
-        font-size: 0.9rem;
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        margin: 0;
-        font-family: sans-serif;
-    }
-    a{
-        background-color: rgb(26, 192, 26);
-        margin-left: 0.5rem;
-        border: none;
-        border-radius: 50%;
-        padding: 0.8rem;
-        cursor: pointer;
-
-        img{
-            width: 35px;
-            display: block;
-            margin: auto;
-        }
-    }
+  }
 }
