--- a/src/components/DescriptionPerson/index.scss
+++ b/src/components/DescriptionPerson/index.scss
@@ -1,171 +1,185 @@
-@use '../../styles/variables';
- @use '../../styles/fonts';
- @use "../../styles/mixins";
- @import "../../styles/global";
+@use "../../styles/variables";
+@use "../../styles/fonts";
+@use "../../styles/mixins";
+@use "../../styles/global";
 
-.index-content{
-    margin-top: 16rem;
+.index-content {
+  margin-top: 14rem;
+  padding: 0 0;
+  background: linear-gradient(90deg, #ffffff 0%, #f7f7f7 100%);
 
-     //media
-     @media screen and (min-width: variables.$breakpoint-xl){
-        margin-top: 20rem;
-     }
-    
+  @media screen and (min-width: variables.$breakpoint-lg) {
+    margin-top: 8rem;
+    padding: 6rem 0;
+  }
 
-    .index-container-about{
+  .index-container-about {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    margin: 0 auto 0 auto;
+    @media (min-width: variables.$breakpoint-m2) {
+      max-width: 1400px;
+      flex-direction: row;
+      justify-content: space-evenly;
+      gap: 2rem;
+    }
+  }
+
+  .index-main-container-img {
+    margin-bottom: 3rem;
+    width: 100%;
+    @media screen and (min-width: variables.$breakpoint-lg) {
+      width: 40%;
+    }
+    .index-main-img {
+      //   position: relative;
+      display: flex;
+      justify-content: center;
+
+      .img-person {
+        width: 90%;
+        height: 400px;
+        border-radius: 10px;
+        box-shadow: 0 0 30px -15px #c19d53;
+        transition: transform 0.5s ease;
+
+        &:hover {
+          transform: scale(1.05);
+        }
+        @media screen and (min-width: variables.$breakpoint-lg) {
+          width: 500px;
+          height: 500px;
+        }
+      }
+    }
+  }
+
+  .index-about {
+    max-width: 550px;
+    @media screen and (max-width: variables.$breakpoint-lg) {
+      padding: 1rem;
+    }
+
+    .index-subtitle {
+      font-size: 1rem;
+      color: #c19d53;
+      font-style: italic;
+      margin-bottom: 0.3rem;
+    }
+
+    .index-title-about {
+      font-family: "Playfair Display", serif;
+      font-size: 2.2rem;
+      margin: 0;
+      color: #0f172a;
+    }
+
+    .border-title-about {
+      width: 50px;
+      height: 4px;
+      background-color: #c19d53;
+      margin: 0.5rem 0 1.5rem 0;
+      border-radius: 2px;
+    }
+
+    .index-text-about {
+      font-size: 1.1rem;
+      color: #333;
+      text-align: justify;
+      line-height: 1.7;
+      margin-bottom: 2rem;
+
+      strong {
+        color: #0f172a;
+      }
+      span {
+        color: #c19d53;
+        font-weight: 500;
+      }
+    }
+
+    // ==== DIFERENCIAIS ====
+    .index-icons-about {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      margin-bottom: 2rem;
+
+      div {
         display: flex;
-        flex-direction: column;
-       
-        //media
-        @media screen and (min-width: variables.$breakpoint-xl){
-            display: flex;
-            flex-direction:row;
-            justify-content: space-evenly;
-            height: 450px;
-           
-           
+        align-items: center;
+        gap: 0.5rem;
+        font-size: 0.95rem;
+        color: #333;
+
+        svg {
+          color: #c19d53;
+          font-size: 1.2rem;
         }
+      }
     }
-    .index-main-container-img{
-        position: relative;
-        left: 1%;
-        // height: 300px;
-        height: 200px;
+
+    // ==== BOTÕES ====
+    .index-buttons {
+      display: flex;
+      gap: 1rem;
+      position: relative;
+      &::after {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background-image: radial-gradient(#e6e6e6 1px, transparent 1px);
+        background-size: 20px 20px;
+        opacity: 0.2;
+        pointer-events: none;
+      }
+
+      .index-button-about {
+        border: none;
+        border-radius: 8px;
+        padding: 0.8rem 1.5rem;
+        cursor: pointer;
+        font-weight: 600;
+        font-size: 1rem;
+        transition: all 0.3s ease;
+
         display: flex;
-        margin: auto;
-        width: 200px;
-        opacity: 1;
-        transform: translateY(200px);
-        transition: opacity 1s, transform 1s;
-
-        //media
-        @media screen and (min-width: variables.$breakpoint-xl){
-            margin: 0;
-        }
-    }
-    .index-main-gray-bc{
-        position: relative;
-        background-color: #4b4a4a;
-        border-top-left-radius: 5px;
-        width: 220px;
-        height: 300px;
-        margin-top: 25px;
-        top: -90%;
-
-        //media
-        @media screen and (min-width: variables.$breakpoint-xl){
-            height: 490px;
-            top: -130%;
-            left: 30%;
+        align-items: center;
+        span {
+          padding-left: 0.5rem;
         }
 
-    }
-    .index-main-img{
-        .img-person {
-            position: absolute !important;
-            z-index: 1 !important;
-            left: -33% !important;
-            top: -65% !important;
-            width: 326px !important;
-            height: 250px !important;
-            border-radius: 5px !important;
-            box-shadow: 0 0 40px #000 !important;
+        &.primary {
+          background-color: #061631;
+          color: #fff;
 
-            
-        //media
-        @media screen and (min-width: variables.$breakpoint-xl){
-            opacity: 1;
-            width: 454px !important;
-            height: 380px !important;
-            top: -90% !important;
-            left: -30% !important;
-            
-        }
+          &:hover {
+            background-color: #0b2a60;
+            transform: translateY(-2px);
           }
-    }
-    .index-main-orange-bc{
-        position: relative;
-        background-color: #bbb9b9;
-        border-top-right-radius: 5px;
-        width: 130px;
-        height: 280px;
-        margin-top: 35px;
-        margin-left: -50px;
-        top: -90%;
-
-        //media
-        @media screen and (min-width: variables.$breakpoint-xl){
-            height: 470px;
-            width: 200px;
-            top: -130%;
-            left: 45%;
-        }
-       
-    }
-
-    .index-about{
-        margin: 13rem auto 0 auto;
-        padding-left: 2rem;
-
-        //media
-        @media screen and (min-width: variables.$breakpoint-xl){
-            margin: 2rem 0 0 0;
-            padding-left: 4rem;
-            width: 500px;
-           
-        
         }
 
-        h3{
-            font-size: 1.8rem;
-            @include mixins.font-family('sans-serif');
-            margin: 0;
+        &.secondary {
+          background-color: transparent;
+          border: 2px solid #061631;
+          color: #061631;
 
-            //media
-        @media screen and (min-width: variables.$breakpoint-xl){
-            @include mixins.font-properties(2.7rem);
-            @include mixins.font-family('Roboto Bold Italic')
-        }
-            
-        }
-
-        .border-title-about{
-            border: 1px solid orange;
-            margin: 0.3rem 0 0.9rem 0;
-            padding: 0.05rem;
-            background-color: orange;
-            width: 50%;
-        }
-        p{
-            font-size: 1.15rem;
-            max-width: 310px;
-            text-align: justify;
-            letter-spacing: -0.01rem;
-            @include mixins.font-family('Roboto Boldd');
-            color: variables.$secondary-dark;
-            line-height: variables.$line-heigth;
-
-            //media
-            @media screen and (min-width: variables.$breakpoint-xl){
-                max-width: 500px;
-                text-align: left;
-                @include mixins.font-properties(1.4rem);
-            }
-            
-        }
-        button{
-            @include mixins.font-family('Roboto Regular');
-            width: 150px;
-            padding: 0.7rem;
-            margin: 1.5rem 0 0 0;
-            font-style: inherit;
-            font-weight: 500;
+          &:hover {
             background-color: #061631;
             color: #fff;
-            border: none;
-            display: block;
-            border-radius: 5px;
-            font-size: 0.9rem;
+            transform: translateY(-2px);
+          }
         }
+      }
     }
+
+    // ==== ASSINATURA ====
+    .index-signature {
+      margin-top: 2rem;
+      font-family: "Great Vibes", cursive;
+      font-size: 1.5rem;
+      color: #333;
+    }
+  }
 }
