--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,97 +1,42 @@
-@use '../../styles/variables';
+@use "../../styles/variables";
 @use "../../styles/mixins";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
+.footer {
+  background: #1c1c1e;
+  padding: 40px 0;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
 
-body{
-	line-height: 1.5;
-	font-family: 'Poppins', sans-serif;
-}
-*{
-	margin:0;
-	padding:0;
-	box-sizing: border-box;
-}
-.container{
-	max-width: variables.$container;
-	margin:auto;
-}
-.row{
-	display: flex;
-	flex-wrap: wrap;
-}
-ul{
-	list-style: none;
-}
-.footer{
-	background-color: variables.$darkk;
-    padding: 70px 0;
-}
-.footer-col{
-   width: 25%;
-   padding: 0 15px;
-}
-.footer-col h4{
-	@include mixins.font-properties(18px, 500);
-	color: variables.$white;
-	text-transform: capitalize;
-	margin-bottom: 35px;
-	position: relative;
-}
-.footer-col h4::before{
-	content: '';
-	position: absolute;
-	left:0;
-	bottom: -10px;
-	background-color: variables.$orange;;
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
-}
-.footer-col ul li:not(:last-child){
-	margin-bottom: 10px;
-}
-.footer-col ul li a{
-	@include mixins.font-properties(16px, 300);
-	text-transform: capitalize;
-	color: #ffffff;
-	text-decoration: none;
-	color: variables.$white;
-	display: block;
-	transition: all 0.3s ease;
-}
-.footer-col ul li a:hover{
-	color: variables.$white;
-	padding-left: 8px;
-}
-.footer-col .social-links a{
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	margin:0 10px 10px 0;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	color: variables.$white;
-	transition: all 0.5s ease;
-}
-.footer-col .social-links a:hover{
-	color: variables.$darkk;
-	background-color: variables.$white;
-}
+  .container-footer {
+    max-width: variables.$container;
+    margin: auto;
+  }
 
-/*responsive*/
-@media(max-width: variables.$breakpoint-m2){
-  .footer-col{
-    width: 50%;
-    margin-bottom: 30px;
-}
-}
-@media(max-width: variables.$breakpoint-sm){
-  .footer-col{
-    width: 100%;
-}
-}
+  .social {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 20px;
 
+    a {
+      display: inline-block;
+      transition: transform 0.3s ease;
 
+      img {
+        height: 42px;
+        width: 42px;
+      }
 
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  .copyright {
+    font-size: 14px;
+    color: variables.$white;
+    opacity: 0.6;
+  }
+}
