--- a/src/components/ServiceContent/index.scss
+++ b/src/components/ServiceContent/index.scss
@@ -1,99 +1,148 @@
-@use '../../styles/variables';
- @use '../../styles/fonts';
- @use "../../styles/mixins";
- @import "../../styles/global";
+@use "../../styles/variables";
+@use "../../styles/fonts";
+@use "../../styles/mixins";
+@use "../../styles/global";
 
+.index-occupation-area {
+  background: linear-gradient(135deg, #24262b 0%, #3a3a3a 30%, #5c4f3b 100%);
+  margin-top: 4rem;
+  padding-bottom: 2rem;
+  text-align: center;
 
-.index-occupation-area{
-    background-color: variables.$darkk;
-    margin-top: 4rem;
-    text-align: center;
+  @media screen and (min-width: variables.$breakpoint-lg) {
+    margin-top: 0;
+  }
 
-     .index-occupation-area-title, h5{
-        
-        @media screen and (min-width: variables.$breakpoint-xl){
-            padding: 2rem 0 0 0 ;
+  .index-occupation-area-title,
+  h5 {
+    @media screen and (min-width: variables.$breakpoint-xl) {
+      padding: 2rem 0 0 0;
+    }
+  }
+
+  .index-occupation-area-title {
+    @include mixins.font-family("Roboto Thin");
+    margin: 0;
+    color: variables.$white;
+    font-size: 1.8rem;
+    padding-top: 1rem;
+
+    @media screen and (min-width: variables.$breakpoint-xl) {
+      padding: 1rem 0 0 2rem;
+    }
+  }
+  h5 {
+    @include mixins.font-family("Roboto Thin");
+    font-size: 1.2rem;
+    color: variables.$white;
+    padding: 0.5rem 0 0 1rem;
+
+    @media screen and (min-width: variables.$breakpoint-xl) {
+      padding: 0.5rem 0 0 2rem;
+    }
+  }
+  .border-title-about {
+    border: 1px solid variables.$orange;
+    margin: 0.3rem auto 1.5rem auto;
+    padding: 0.05rem;
+    background-color: variables.$orange;
+    width: 50%;
+
+    //media
+    @media screen and (min-width: variables.$breakpoint-xl) {
+      margin: 0.3rem auto 2rem auto;
+      width: 40%;
+    }
+  }
+  .index-occupation-areas {
+    padding-bottom: 2rem;
+    width: 95%;
+    margin: auto;
+
+    //media
+    @media screen and (min-width: variables.$breakpoint-xl) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      width: 1100px;
+    }
+  }
+  .index-button-container {
+    margin: auto;
+    display: block;
+
+    .index-button-about {
+      border: none;
+      border-radius: 8px;
+      padding: 0.8rem 1.5rem;
+      margin: 0 auto 0 auto;
+      display: flex;
+      align-items: center;
+      span {
+        padding-left: 0.5rem;
+      }
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: all 0.3s ease;
+      position: relative;
+      &::after {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background-image: radial-gradient(#e6e6e6 1px, transparent 1px);
+        background-size: 20px 20px;
+        opacity: 0.2;
+        pointer-events: none;
+      }
+
+      &.primary {
+        background-color: #818080;
+        color: #fff;
+
+        &:hover {
+          background-color: #fff;
+          color: #000;
+          transform: translateY(-2px);
         }
-     }
+      }
 
-    .index-occupation-area-title{
-        @include mixins.font-family('Roboto Thin');
-        margin: 0;
-        color: variables.$white;
-        font-size: 1.8rem;
-        padding-top: 1rem;
+      &.secondary {
+        background-color: transparent;
+        border: 2px solid #061631;
+        color: #061631;
 
-        @media screen and (min-width: variables.$breakpoint-xl){
-            padding: 1rem 0 0 2rem;
+        &:hover {
+          background-color: #061631;
+          color: #fff;
+          transform: translateY(-2px);
         }
-       
-    
+      }
     }
-   h5{
-    @include mixins.font-family('Roboto Thin');
-        font-size: 1.2rem;
-        color: variables.$white;
-        padding: 0.5rem 0 0 1rem;
+  }
+  .index-button-areas {
+    @include mixins.font-family("Roboto Regular");
+    width: 180px;
+    padding: 1rem 0;
+    margin: 1rem auto 0 4.4rem;
+    font-style: inherit;
+    font-size: 0.9rem;
+    font-weight: 500;
+    background-color: variables.$white;
+    border-radius: 5px;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none !important;
 
-        @media screen and (min-width: variables.$breakpoint-xl){
-            padding: 0.5rem 0 0 2rem;
-        }
-       
+    //media
+    @media screen and (min-width: variables.$breakpoint-xl) {
+      padding: 0.7rem;
+      margin: 1rem 0;
     }
-    .border-title-about{
-        border: 1px solid variables.$orange;
-        margin: 0.3rem auto 1.5rem auto;
-        padding: 0.05rem;
-        background-color: variables.$orange;
-        width: 50%;
-
-        //media
-        @media screen and (min-width: variables.$breakpoint-xl){
-            margin: 0.3rem auto 2rem auto;
-            width: 40%;
-        }
+    img {
+      width: 32px;
     }
-    .index-occupation-areas{
-        padding-bottom: 6rem;
-        width: 95%;
-        margin: auto;
-
-          //media
-     @media screen and (min-width: variables.$breakpoint-xl){
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        width: 1100px;  
-     }
-    }
-    .index-button-container{
-        margin: auto;
-    }
-    .index-button-areas{
-        @include mixins.font-family('Roboto Regular');
-        width: 180px;
-        padding: 1rem 0;
-        margin: 1rem auto 0 4.4rem;
-        font-style: inherit;
-        font-size: 0.9rem;
-        font-weight: 500;
-        background-color:  variables.$white;
-        border-radius: 5px;
-        color: #000;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: none !important;
-
-
-  //media
-     @media screen and (min-width: variables.$breakpoint-xl){
-        padding: 0.7rem;
-        margin: 1rem 0;
-        
-     }
-        img{
-            width: 32px;
-        }
-    }
+  }
 }
